--- a/index.html
+++ b/index.html
@@ -4,21 +4,7 @@
    <meta http-equiv="Content-type" content="text/html;charset=utf-8">  
     </head>  
      <body>  
-        <div>  
-            <object width="340" height="86" data="http://music.163.com/style/swf/widget.swf?sid=188900&type=2&auto=0&width=320&height=66" type="application/x-shockwave-flash"></object>  
-        </div>  
-  
-        <hr />  
-  
-        <div>  
-        <object width="330" height="450" data="http://music.163.com/style/swf/widget.swf?sid=19742382&type=0&auto=0&width=310&height=430" type="application/x-shockwave-flash"></object>  
-        </div>  
-  
-            <hr />  
-  
-        <div>  
-        <object width="330" height="450" data="http://music.163.com/style/swf/widget.swf?sid=19971812&type=0&auto=0&width=310&height=430" type="application/x-shockwave-flash"></object>  
-        </div>  
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="298" height="52" src="http://music.163.com/outchain/player?type=2&amp;id=2866921&amp;auto=0&amp;height=32"></iframe> 
      </body>  
   
       </html>  
